--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -730,7 +730,7 @@ Note that in the \ESSM model the charges are fixed to be those of the $U(1)_N$ a
 \item Add Singlet Higgs superfield to SuperFields
 \begin{lstlisting}
 SuperFields[[8]] = {s, 1, sR,     0, 1,  1, Qs, RpP};
-\end{lstlisting}\end{lstlisting}
+\end{lstlisting}
 \item Add inert Higgs-like superfields 
 \begin{lstlisting}
 SuperFields[[9]] = {H1I, 2, {H1I0, H1Im},  -1/2, 2, 1, QHu, RpP};
