--- a/ChangeLog
+++ b/ChangeLog
@@ -3,11 +3,11 @@ FlexibleSUSY-0.5.2 [not released yet]
  * Bugfix (commit 58f8f9): Convert beta functions which are identical
    zero to the data type of the corresponding parameter.
 
-FlexibleSUSY-0.5.1
+FlexibleSUSY-0.5.1 [November 23, 2013]
 
  * Handle parameters of type vector in the beta functions.
 
-FlexibleSUSY-0.5
+FlexibleSUSY-0.5 [November 18, 2013]
 
  * Store particle masses as Eigen::Array and mixing matrices as
    Eigen::Matrix.
