--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@ FlexibleSUSY-0.5.2 [not released yet]
  * Bugfix (commit e5f937): Correcting check of SARAH patch level
    against minimum required patch level.
 
+ * Set minimum required SARAH version to 4.0.3, because it includes a
+   bug fix in the index structure of the charged Higgs self-energies.
+
 FlexibleSUSY-0.5.1 [November 23, 2013]
 
  * Handle parameters of type vector in the beta functions.
