fixed typo ZNp --> ZNI.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -852,7 +852,7 @@ DEFINITION[EWSB][MatterSector]=
  {{SHpd0,conj[SHpu0]},{SHp0,UHp0}},
  {{SHpdm,conj[SHpup]},{SHpp,UHpp}},
  {{FHpd0,FHpu0},{L0p,ZNp}},
- {{FH1I0,FH2I0},{L0I,ZNp}}
+ {{FH1I0,FH2I0},{L0I,ZNI}}
 \end{lstlisting}
 \end{enumerate}  
  
