--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@ FlexibleSUSY-0.5.2 [not released yet]
  * Bugfix (commit e2d43b): Adapting free phases of fermion fields if
    mass is less than zero.
 
+ * Bugfix (commit e777e1): Converting indices to C convention in
+   tree-level EWSB equations.
+
  * Set minimum required SARAH version to 4.0.3, because it includes a
    bug fix in the index structure of the charged Higgs self-energies.
 
