--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -107,8 +107,8 @@ Higgs
          {\tt http://flexiblesusy.hepforge.org/}\\ {\em Distribution
            format:}\/ tar.gz\\ {\em Programming language:} {\tt
            C++}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
-           system:}\/ Tested on Linux 4.x\\ {\em Word size:}\/ 32
-         bits\\ {\em External routines:}\/ SARAH 4.0.0, Boost library,
+           system:}\/ Tested on Linux 3.x\\ {\em Word size:}\/ 64
+         bits\\ {\em External routines:}\/ SARAH 4.0.3, Boost library,
          lapack {\color{red} Not sure what counts here?}\\ {\em
            Typical running time:}\/ 0.1-0.3 seconds per parameter
          point.\\ {\em Nature of problem:}\/ Determining the mass
@@ -295,7 +295,7 @@ Flexible SUSY can be downloaded from \url{http://flexiblesusy.hepforge.org}.
 To use FlexibleSUSY please make sure you have the following installed.  
 \begin{itemize}
 \item Mathematica, version 7 or higher
-\item SARAH, version 4.0.0 or higher \url{http://sarah.hepforge.org}
+\item SARAH, version 4.0.3 or higher \url{http://sarah.hepforge.org}
 \item C++11 compatible compiler (g++ 4.6.0 or higher, clang++ 3.1 or
   higher)
 \item Fortran compiler (gfortran, ifort etc.)
@@ -440,7 +440,7 @@ int MSSM<Two_scale>::tadpole_equations(const gsl_vector* x, void* params, gsl_ve
    MSSM* model = ewsb_parameters->model;
    const unsigned ewsb_loop_order = ewsb_parameters->ewsb_loop_order;
 
-   double tadpole[numberOfEWSBEquations];
+   double tadpole[number_of_ewsb_equations];
 
    model->set_BMu(gsl_vector_get(x, 0));
    model->set_Mu(INPUT(SignMu) * Abs(gsl_vector_get(x, 1)));
@@ -457,7 +457,7 @@ int MSSM<Two_scale>::tadpole_equations(const gsl_vector* x, void* params, gsl_ve
 
    }
 
-   for (std::size_t i = 0; i < numberOfEWSBEquations; ++i)
+   for (std::size_t i = 0; i < number_of_ewsb_equations; ++i)
       gsl_vector_set(f, i, tadpole[i]);
 
    return GSL_SUCCESS;
@@ -472,13 +472,14 @@ the one-loop EWSB eqs.\ \eqref{eq:one-loop-ewsb-eq}.  This
 %
 \begin{lstlisting}[language=C++]
 // initial guess
-double x_init[numberOfEWSBEquations];
+double x_init[number_of_ewsb_equations];
 ewsb_initial_guess(x_init);
 
 // setup root finder
 int ewsb_loop_order = 1;
 Ewsb_parameters params = {this, ewsb_loop_order};
-Root_finder<numberOfEWSBEquations> root_finder(MSSM<Two_scale>::tadpole_equations,
+Root_finder<number_of_ewsb_equations> root_finder(
+                           MSSM<Two_scale>::tadpole_equations,
                            &params,
                            number_of_ewsb_iterations,
                            ewsb_iteration_precision);
