--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -648,15 +648,37 @@ Calculating the particle spectrum:
   \label{fig:two-scale-rgflow-class-hierarchy}
 \end{figure}
 {\color{red} copied and pasted from latest manual -- not sure how best to maintain this, could split maual up into tiny bits, but we may also want some differences?}
-\subsection{pole masses}
-With the solver routine finished and convergence achieved, the $\overline{DR}$ parameters consistent with one loop EWSB, low energy data and all user supplied boundary conditions are then known at any scale between...
 
-The physical mass spectrum can now be calculated.  \fs uses the full one-loop self energies and tree level routines to calculate the pole masses at the one-level.  If higher accuracy is required additional routines with higher order corrections can be added in a very simple way. For example in the MSSM by default \fs adds two loop Higgs FORTRAN routines supplied by P.~Slavich from \cite{slavich-degrassi} to add two loop corrections of $\oatas$, $\oabas$, $\oatq$, $\oabatau$, 
-$\oabq$, $\oatauq$ and $\oatab$  as follows...  
-Something similar is done for the NMSSM, but in this case the NMSSM $\oatas$, $\oabas$ pieces come from \cite{Degrassi:2009yq}, while for $\oatq$, $\oabatau$, 
-$\oabq$, $\oatauq$ and $\oatab$ the MSSM pieces are used though it should be understood that these are not complete in the NMSSM. For other models since the Higgs mass is a very important measurement and the two loop corrections can be larger than the current experimental error \cite{Degrassi:2009yq} we recommend that the leading log two loop corrections are estimated, by generalising those of the MSSM or NMSSM, as has been done, for example, in the E$_6$SSM\cite{King:2005jy}. 
+\subsection{Pole masses}
+After the solver routine has finished and convergence has been
+achieved, all $\overline{DR}$ parameters are consistent with the
+one-loop EWSB conditions, low energy data and all user supplied
+boundary conditions are known at any scale between \code{LowScale} and
+\code{HighScale}.
 
-Corrections to other masses or further corrections to the Higgs states can be added very easily by...
+The physical (pole) mass spectrum can now be calculated.  \fs uses the
+full one-loop self-energies and tree-level mass matrices to calculate
+the pole masses at the one-loop level.  If higher accuracy is required
+additional routines with higher order corrections can be added in a
+very simple way. For example in the MSSM by default \fs adds two-loop
+Higgs FORTRAN routines supplied by P.~Slavich from
+\cite{slavich-degrassi} to add two loop corrections of $\oatas$,
+$\oabas$, $\oatq$, $\oabatau$, $\oabq$, $\oatauq$ and $\oatab$ as
+follows... {\color{red} This is not yet implemented!}
+
+Something similar is done for the NMSSM, but in this case the NMSSM
+$\oatas$, $\oabas$ pieces come from \cite{Degrassi:2009yq}, while for
+$\oatq$, $\oabatau$, $\oabq$, $\oatauq$ and $\oatab$ the MSSM pieces
+are used though it should be understood that these are not complete in
+the NMSSM. For other models since the Higgs mass is a very important
+measurement and the two loop corrections can be larger than the
+current experimental error \cite{Degrassi:2009yq} we recommend that
+the leading log two loop corrections are estimated, by generalising
+those of the MSSM or NMSSM, as has been done, for example, in the
+E$_6$SSM\cite{King:2005jy}.  {\color{red} This is not yet implemented!}
+
+Corrections to other masses or further corrections to the Higgs states
+can be added very easily by...
 
 \subsection{Lattice method}
 If ready.
