--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+FlexibleSUSY-0.5.3 [not released yet]
+
+ * Bugfix (commit 44903c): correcting malformed print out in
+   config/list_sarah_model_files.sh in case model files do not exist
+
 FlexibleSUSY-0.5.2 [January 14, 2014]
 
  * Bugfix (commit 58f8f9): Convert beta functions which are identical
