--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-FlexibleSUSY-0.5.3 [not released yet]
+FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
    config/list_sarah_model_files.sh in case model files do not exist
