--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -73,4 +73,13 @@ bookmarks=true, linktocpage]{hyperref}
 \input{doc/chapters/usage}
 \input{doc/chapters/output}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Bibliography
+
+\clearpage
+\pagestyle{plain}
+
+\bibliographystyle{unsrt}
+\bibliography{doc/bibliography}
+
 \end{document}
