--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -32,8 +32,8 @@ bookmarks=true, linktocpage]{hyperref}
 
 \newcommand{\code}[1]{\lstinline|#1|}  % inline source code
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
-\newcommand{\DRbar}{\textoverline{DR}}  % inline source code
-\newcommand{\MSbar}{\textoverline{MS}}  % inline source code
+\newcommand{\DRbar}{\textoverline{DR}\xspace}  % inline source code
+\newcommand{\MSbar}{\textoverline{MS}\xspace}  % inline source code
 
 \begin{document}
 
