--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -31,9 +31,12 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\flexisusy}{\FlexibleSUSY}
 
 \newcommand{\code}[1]{\lstinline|#1|}  % inline source code
+\newcommand{\unit}[1]{\;\text{#1}}       % units
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
-\newcommand{\DRbar}{\textoverline{DR}\xspace}  % inline source code
-\newcommand{\MSbar}{\textoverline{MS}\xspace}  % inline source code
+\newcommand{\DRbar}{\textoverline{DR}\xspace}
+\newcommand{\MSbar}{\textoverline{MS}\xspace}
+\DeclareMathOperator{\re}{Re}
+\DeclareMathOperator{\im}{Im}
 
 \begin{document}
 
