--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -10,3 +10,36 @@
       year           = "2012",
       SLACcitation   = "%%CITATION = PHRVA,D86,010001;%%",
 }
+
+@article{Baer:2002ek,
+      author         = "Baer, Howard and Ferrandis, Javier and Melnikov, Kirill
+                        and Tata, Xerxes",
+      title          = "{Relating bottom quark mass in DR-BAR and MS-BAR
+                        regularization schemes}",
+      journal        = "Phys.Rev.",
+      volume         = "D66",
+      pages          = "074007",
+      doi            = "10.1103/PhysRevD.66.074007",
+      year           = "2002",
+      eprint         = "hep-ph/0207126",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-9283, UH-511-1004-02, FSU-HEP-020709",
+      SLACcitation   = "%%CITATION = HEP-PH/0207126;%%",
+}
+
+@article{Bednyakov:2002sf,
+      author         = "Bednyakov, A. and Onishchenko, A. and Velizhanin, V. and
+                        Veretin, O.",
+      title          = "{Two loop O(alpha-s**2) MSSM corrections to the pole
+                        masses of heavy quarks}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C29",
+      pages          = "87-101",
+      doi            = "10.1140/epjc/s2003-01178-4",
+      year           = "2003",
+      eprint         = "hep-ph/0210258",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0210258;%%",
+}
