dumping low-energy mass formulas into the manual
Still missing:
 * formatting
 * what does "heavy" mean?

--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -35,6 +35,7 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
 \newcommand{\DRbar}{\textoverline{DR}\xspace}
 \newcommand{\MSbar}{\textoverline{MS}\xspace}
+\newcommand{\userinput}{\text{<input>}}
 \DeclareMathOperator{\re}{Re}
 \DeclareMathOperator{\im}{Im}
 
