--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 Peter Athron            <peter.athron@adelaide.edu.au>
-Jae-hyeon Park          <jae-hyeon.park@tu-dresden.de>
+Jae-hyeon Park          <jae.park@uv.es>
 Dominik Stöckinger      <Dominik.Stoeckinger@tu-dresden.de>
 Alexander Voigt         <Alexander.Voigt@physik.tu-dresden.de>
