add illustration of the workflow

--- a/doc/flexiblesusy.tex
+++ b/doc/flexiblesusy.tex
@@ -8,6 +8,12 @@
 \usepackage{xspace}
 \usepackage[usenames]{xcolor}
 \usepackage{tikz,tikz-uml}
+\usetikzlibrary{shapes,arrows,positioning}
+\tikzstyle{block} = [rectangle, draw, text centered, minimum height=2em]
+\tikzstyle{cloud} = [rectangle, draw, dashed, align=left, minimum height=2em]
+\tikzstyle{arrow} = [draw, -latex, thick]
+\tikzstyle{arrow2} = [draw, latex-latex, thick]
+\tikzstyle{dashed-arrow} = [draw, -latex, dashed]
 \usepackage{listings}             % source code highlighting
 \lstset{breaklines=true,
   breakatwhitespace=true,
@@ -36,6 +42,7 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\DRbar}{\textoverline{DR}\xspace}
 \newcommand{\MSbar}{\textoverline{MS}\xspace}
 \newcommand{\userinput}{\text{<input>}}
+\newcommand{\figref}[1]{\figurename~\ref{#1}}
 \DeclareMathOperator{\re}{Re}
 \DeclareMathOperator{\im}{Im}
 
