--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -33,6 +33,8 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\code}[1]{\lstinline|#1|}  % inline source code
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
 \newcommand{\DRbar}{\textoverline{DR}}  % inline source code
+\newcommand{\unit}[1]{\,\text{#1}}      % units
+\DeclareMathOperator{\sign}{sign}
 \def\at{\alpha_t}
 \def\ab{\alpha_b}
 \def\as{\alpha_s}
@@ -686,6 +688,119 @@ If ready.
 \section{Implementing new models}
 \section{Adapting the code at the C++ level}
 \section{Using individual modules in your own code}
+
+\section{Run-time comparison with other spectrum generators}
+
+We compare the run-time of the four different spectrum generators
+FlexibleSUSY (version 0.5.3), Softsusy (version 3.4.0), SPheno
+(3.2.4), SPhenoMSSM (generated with SARAH 4.1.0 and linked against
+SPheno 3.2.4).  FlexibleSUSY and Softsusy were compiled with g++ 4.8.0
+and gfortran 4.8.0.  SPheno and SPhenoMSSM were compiled with Intel
+ifort 13.1.3 20130607\footnote{We are using Intel's ifort compiler,
+  instead of gfortran 4.8.0, because it decreases the run-time of
+  SPheno and SPhenoMSSM by approximately a factor $1.5$.}.  We're
+generating random CMSSM parameter points with $m_0\in [50,1000]$
+$m_{1/2}\in [50,1000]$, $\tan\beta\in [1,100]$, $\sign\mu\in
+\{-1,+1\}$ and $A_0\in [-1000,1000]$.  The following SLHA template
+file was used:
+%
+\begin{verbatim}
+Block MODSEL                 # Select model
+    6    0                   # flavour violation
+    1    1                   # mSUGRA
+Block SMINPUTS               # Standard Model inputs
+    1   1.279180000e+02      # alpha^(-1) SM MSbar(MZ)
+    2   1.166390000e-05      # G_Fermi
+    3   1.189000000e-01      # alpha_s(MZ) SM MSbar
+    4   9.118760000e+01      # MZ(pole)
+    5   4.200000000e+00      # mb(mb) SM MSbar
+    6   1.709000000e+02      # mtop(pole)
+    7   1.777000000e+00      # mtau(pole)
+Block SOFTSUSY               # SOFTSUSY specific inputs
+    1   1.000000000e-04      # tolerance
+    2   2                    # up-quark mixing (=1) or down (=2)
+    3   0                    # printout
+    5   1                    # 2-loop running
+    7   2                    # EWSB and Higgs mass loop order
+Block FlexibleSUSY
+    0   1.000000000e-04      # precision goal
+    1   0                    # max. iterations (0 = automatic)
+    2   0                    # algorithm (0 = two_scale, 1 = lattice)
+    3   0                    # calculate SM pole masses
+    4   1                    # calculate loop masses
+    5   1                    # EWSB loop order
+Block SPhenoInput            # SPheno specific input
+    1  -1                    # error level
+    2   1                    # SPA conventions
+    11  0                    # calculate branching ratios
+    13  0                    # include 3-Body decays
+    12  1.000E-04            # write only branching ratios larger than this value
+    31  -1                   # fixed GUT scale (-1: dynamical GUT scale)
+    32  0                    # Strict unification
+    34  1.000E-04            # Precision of mass calculation
+    35  40                   # Maximal number of iterations
+    37  1                    # Set Yukawa scheme
+    38  2                    # 1- or 2-Loop RGEs
+    50  1                    # Majorana phases: use only positive masses
+    51  0                    # Write Output in CKM basis
+    52  0                    # Write spectrum in case of tachyonic states
+    55  1                    # Calculate one loop masses
+    57  0                    # Calculate low energy constraints
+    60  0                    # Include possible, kinetic mixing
+    65  1                    # Solution tadpole equation
+    75  0                    # Write WHIZARD files
+    76  0                    # Write HiggsBounds file
+    86  0.                   # Maximal width to be counted as invisible in Higgs decays
+    510 0.                   # Write tree level values for tadpole solutions
+    515 0                    # Write parameter values at GUT scale
+    520 0.                   # Write effective Higgs couplings (HiggsBounds blocks)
+    525 0.                   # Write loop contributions to diphoton decay of Higgs
+Block MINPAR
+    1   [50..1000]           # m0(MX)
+    2   [50..1000]           # m12(MX)
+    3   [1..100]             # tan(beta)(MZ) DRbar
+    4   {-1,+1}              # sign(mu)
+    5   [-1000..1000]        # A0(MX)
+\end{verbatim}
+%
+The SLHA file was passed to each spectrum generator and the
+(wall-clock) time was measured until the program has finished.  The
+average run-times for three different CPU types can be found in
+\tablename~\ref{tab:run-time-comparison}.  The first row shows the
+run-time on a Intel Core2 Duo (P8600) where only one core was enabled.
+The second row shows the run-time on a Intel Core2 Duo (P8600) where
+both cores were enabled.  In the third row a Intel Xeon (L5640) was
+used, which has $6$ CPU cores.
+%
+\begin{table}[tbh]
+  \centering
+  \begin{tabular}{llll}
+    \toprule
+                          & Intel Core2 Duo            & Intel Core2 Duo             & Intel Xeon\\
+                          & (1 core, $2.40\unit{GHz}$) & (2 cores, $2.40\unit{GHz}$) & (6 cores, $2.27\unit{GHz}$)\\
+    \midrule
+    FlexibleSUSY 0.5.3    & $0.151\unit{s}$    & $0.114\unit{s}$   & $0.081\unit{s}$\\
+    Softsusy 3.4.0        & $0.178\unit{s}$    & $0.174\unit{s}$   & $0.157\unit{s}$\\
+    SPheno 3.2.4          & $0.120\unit{s}$    & $0.118\unit{s}$   & $0.108\unit{s}$\\
+    SPhenoMSSM 4.1.0${}^*$ & $0.463\unit{s}$    & $0.450\unit{s}$   & $0.403\unit{s}$\\
+    \bottomrule
+  \end{tabular}
+  \caption{Average run-time for random CMSSM parameter points.
+    FlexibleSUSY and Softsusy were compiled
+    with g++ 4.8.0 and gfortran 4.8.0.  SPheno and SPhenoMSSM were
+    compiled with ifort 13.1.3 20130607.
+    ${}^*$ SPhenoMSSM was generated with SARAH 4.1.0 and linked
+    against SPheno 3.2.4.}
+  \label{tab:run-time-comparison}
+\end{table}
+%
+We find that on the single-core machine SPheno is fastest with
+$0.120\unit{s}$, and FlexibleSUSY is second with $0.151\unit{s}$.  In
+the case of 2 or 6 CPU cores, FlexibleSUSY is fastest with
+$0.114\unit{s}$ and $0.081\unit{s}$, respectively.  The reason is that
+FlexibleSUSY calculates each pole mass in a separate thread, and
+therefore benefits from multi-core CPUs.
+
 \appendix
 \section{Examples}
 \subsection{NMSSM}
