adding the CPU type to the table head

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -776,7 +776,7 @@ used, which has $6$ CPU cores.
   \centering
   \begin{tabular}{llll}
     \toprule
-                          & Intel Core2 Duo            & Intel Core2 Duo             & Intel Xeon\\
+                          & Intel Core2 Duo (P8600)    & Intel Core2 Duo (P8600)     & Intel Xeon (L5640)\\
                           & (1 core, $2.40\unit{GHz}$) & (2 cores, $2.40\unit{GHz}$) & (6 cores, $2.27\unit{GHz}$)\\
     \midrule
     FlexibleSUSY 0.5.3    & $0.151\unit{s}$    & $0.114\unit{s}$   & $0.081\unit{s}$\\
